--- a/SmartHome/MainWindow.xaml
+++ b/SmartHome/MainWindow.xaml
@@ -14,7 +14,7 @@
         <ContentControl Name="LoadedContent" Panel.ZIndex="0"/>
         <ListView Name="AppLauncher" Panel.ZIndex="1" ItemsSource="{Binding Source={x:Static local:AppLauncherControl.AppTiles}}"
                         Visibility="{Binding AppLauncher_Visibility}" Height="250" VerticalAlignment="Bottom"
-                        SelectedIndex="{Binding AppSelectedIndex, Mode=TwoWay}" BorderThickness="0" Background="Transparent">                        
+                        SelectedIndex="{Binding AppSelectedIndex, Mode=TwoWay}" BorderThickness="0" Focusable="False">                        
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <VirtualizingStackPanel Orientation="Horizontal" />
@@ -48,7 +48,7 @@
                     <Setter Property="Control.Width" Value="150"/>  
                     <Setter Property="Control.Height" Value="220"/>
                     <Setter Property="Control.Padding" Value="0"/>
-                    <Setter Property="Control.Margin" Value="4,1,4,1"/>
+                    <Setter Property="Control.Margin" Value="2,1,2,1"/>
                     <Setter Property="VerticalContentAlignment" Value="Stretch"/>
                     <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
                     <Setter Property="FocusVisualStyle" Value="{x:Null}" />
