--- a/SmartHome.Weather/Views/Weather_Tile.xaml
+++ b/SmartHome.Weather/Views/Weather_Tile.xaml
@@ -3,14 +3,27 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d"  Background="Blue"  xmlns:local="clr-namespace:SmartHome.Weather.ViewModels">
+             mc:Ignorable="d"  Background="Blue"  xmlns:local="clr-namespace:SmartHome.Weather.ViewModels">             
     <UserControl.DataContext>
         <local:Weather_TileVM/>
     </UserControl.DataContext>
     <Grid>        
         <StackPanel>
-            <Label Content="WEATHER TILE" Foreground="White"/>
-            <Label Content="{Binding CurrentTemp}" Foreground="White" />
+            <StackPanel.DataContext>
+                <local:Weather_ContentVM/>
+            </StackPanel.DataContext>
+            <Label Content="LOCAL WEATHER" Foreground="White" FontSize="20"/>
+            <StackPanel Orientation="Horizontal">
+                <Label Foreground="White" Content="{Binding CurrentWeatherData.Temp}" FontSize="20" />  
+                <Label Content="°" FontSize="25" Foreground="White"/>
+            </StackPanel>
+            <Label Foreground="White" Content="{Binding CurrentWeatherData.City}" FontSize="20" />
+            <StackPanel Orientation="Horizontal">
+                <Label Name="High" Content="{Binding CurrentWeatherData.High}" Foreground="White" FontSize="15"/>
+                <Label Content="/"  FontSize="15" Foreground="White"/>
+                <Label Name="Low" Content="{Binding CurrentWeatherData.Low}" Foreground="White" FontSize="15"/>
+                <Label Name="ShortDescription" Content="{Binding CurrentWeatherData.Text}" FontSize="15" Foreground="White"/>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </UserControl>
