--- a/SmartHome.Netflix/Views/Netflix_Tile.xaml
+++ b/SmartHome.Netflix/Views/Netflix_Tile.xaml
@@ -5,6 +5,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" Background="Red">
     <Grid >
-        <Label Content="Netflix"/>
+        <Image Name="NetImg" />
     </Grid>
 </UserControl>
