--- a/SmartHome.TV/Views/TV_Tile.xaml
+++ b/SmartHome.TV/Views/TV_Tile.xaml
@@ -4,7 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" Background="Black">
-    <Grid >
-        <Label Content="TV TILE" Foreground="White"/>
-    </Grid>
+    <StackPanel>
+        <Label Content="Live" FontSize="15" Foreground="White" />
+        <Label Content="TV" FontSize="20" Foreground="White" Margin="0,0,0,20"/>
+        <Image Name="TVImg" Width="100" Height="100"/>
+    </StackPanel>
 </UserControl>
