--- a/SmartHome.Movies/Views/Movies_Content.xaml
+++ b/SmartHome.Movies/Views/Movies_Content.xaml
@@ -3,13 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d"  xmlns:local="clr-namespace:SmartHome.Movies.ViewModels">
+             mc:Ignorable="d"  xmlns:local="clr-namespace:SmartHome.Movies.ViewModels"
+             Loaded="UserControl_Loaded" >
     <UserControl.DataContext>
         <local:Movies_ContentVM/>
     </UserControl.DataContext>
     <Grid>
-        <ListView Name="LocalCatalogItemsControl" ItemsSource="{Binding MovieCollection}" Focusable="False"  SelectedIndex="{Binding GenreSelectedIndex, Mode=TwoWay}"
-                   ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.CanContentScroll="True" >
+        <ListView Name="GenreListView" ItemsSource="{Binding MovieCollection}"  BorderThickness="0" Focusable="False"  
+                   ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.CanContentScroll="True" 
+                  KeyboardNavigation.TabNavigation="None">
             <ListView.Resources>
                 <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Transparent" />
                 <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Transparent" />
@@ -23,12 +25,13 @@
                             <RowDefinition Height="200"/>
                         </Grid.RowDefinitions>
                         <Label Content="{Binding Path=ParentCategory}" FontSize="30" Grid.Row="0"/>
-                        <ListView Grid.Row="1" Focusable="False" SelectedIndex="{Binding MovieSelectedIndex, Mode=TwoWay}"
+                        <ListView Name="MediaListView" Grid.Row="1" Focusable="True"  BorderThickness="0"
                                   ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.CanContentScroll="True"
-                            ItemsSource="{Binding IsAsync=True, RelativeSource={x:Static RelativeSource.Self}, Path=DataContext}" Background="Transparent">
+                                  ItemsSource="{Binding IsAsync=True, RelativeSource={x:Static RelativeSource.Self}, Path=DataContext}" Background="Transparent"
+                                  KeyboardNavigation.TabNavigation="None">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
-                                    <Image Source="{Binding Path= LargeCoverArt}" />
+                                    <Image Name="MediaImage" Source="{Binding Path= LargeCoverArt}" Stretch="Fill"/>
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                             <ItemsControl.ItemsPanel>
@@ -55,12 +58,12 @@
                                             <Setter Property="BorderThickness" Value="0"/>
                                         </Trigger>
                                     </Style.Triggers>
-                                    <Setter Property="Control.Width" Value="100"/>
-                                    <Setter Property="Control.Height" Value="100"/>
+                                    <Setter Property="Control.HorizontalAlignment" Value="Stretch"/>
+                                    <Setter Property="Control.VerticalAlignment" Value="Stretch"/>
+                                    <Setter Property="Control.Width" Value="250"/>
+                                    <Setter Property="Control.Height" Value="150"/>
                                     <Setter Property="Control.Padding" Value="0"/>
                                     <Setter Property="Control.Margin" Value="2,1,2,1"/>
-                                    <Setter Property="VerticalContentAlignment" Value="Stretch"/>
-                                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
                                     <Setter Property="FocusVisualStyle" Value="{x:Null}" />
                                 </Style>
                             </ItemsControl.ItemContainerStyle>
