--- a/SmartHome.Netflix/Views/Netflix_Content.xaml
+++ b/SmartHome.Netflix/Views/Netflix_Content.xaml
@@ -3,8 +3,100 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" >
+             mc:Ignorable="d" xmlns:local="clr-namespace:SmartHome.Netflix.ViewModels"
+             Loaded="UserControl_Loaded" Background="Black">
+    <UserControl.DataContext>
+        <local:Netflix_ContentVM/>
+    </UserControl.DataContext>
     <Grid>
-        <Label Content="Weather Content"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="385"/>
+        </Grid.RowDefinitions>
+        
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="4*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0">
+                <Label Content="Selected Title Info" Foreground="White"/>
+            </StackPanel>
+            <Grid Grid.Column="1" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Image Panel.ZIndex="1" Stretch="UniformToFill" Source="http://cdn-0.nflximg.com/en_US/pages/billboard/billboard_licensed_vignette_nobottom.png"/>
+                <Image Panel.ZIndex="0" Source="{Binding NFSelectedImageSource,IsAsync=True}" Stretch="Uniform"/>
+            </Grid>
+        </Grid>
+
+        <ListView Name="NFGenreListView" Grid.Row="1" ItemsSource="{Binding NFMovieCollection}" Foreground="White"  BorderThickness="0" Focusable="False" Background="Transparent"
+                   ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.CanContentScroll="True" >
+            <ListView.Resources>
+                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Transparent" />
+                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Transparent" />
+                <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent" />
+            </ListView.Resources>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="150"/>
+                        </Grid.RowDefinitions>
+                        <Label Content="{Binding Path=ParentCategory}" FontSize="20" Grid.Row="0" Foreground="White"/>
+                        <ListView Name="NFMediaListView" Grid.Row="1" Focusable="True" BorderThickness="0"
+                                  ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.CanContentScroll="True"
+                                  ItemsSource="{Binding IsAsync=True, RelativeSource={x:Static RelativeSource.Self}, Path=DataContext}" Background="Transparent"
+                                  KeyboardNavigation.DirectionalNavigation="None">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <Image Source="{Binding Path=HDBoxArt,IsAsync=True}" Stretch="Fill" />
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <VirtualizingStackPanel Orientation="Horizontal" />
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                            <ItemsControl.ItemContainerStyle>
+                                <Style TargetType="ListViewItem">
+                                    <Style.Triggers>
+                                        <Trigger Property="IsSelected" Value="False">
+                                            <Setter Property="Control.RenderTransform">
+                                                <Setter.Value>
+                                                    <ScaleTransform ScaleX="1" ScaleY="1"/>
+                                                </Setter.Value>
+                                            </Setter>
+                                        </Trigger>
+                                        <Trigger Property="IsSelected" Value="True">
+                                            <Setter Property="Control.RenderTransform">
+                                                <Setter.Value>
+                                                    <ScaleTransform  ScaleX="1.1" ScaleY="1.1"/>
+                                                </Setter.Value>
+                                            </Setter>
+                                            <Setter Property="BorderThickness" Value="0"/>
+                                        </Trigger>
+                                    </Style.Triggers>
+                                    <Setter Property="Control.HorizontalAlignment" Value="Stretch"/>
+                                    <Setter Property="Control.VerticalAlignment" Value="Stretch"/>
+                                    <Setter Property="Control.Width" Value="250"/>
+                                    <Setter Property="Control.Height" Value="150"/>
+                                    <Setter Property="Control.Padding" Value="0"/>
+                                    <Setter Property="Control.Margin" Value="2,1,2,1"/>
+                                    <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+                                </Style>
+                            </ItemsControl.ItemContainerStyle>
+                        </ListView>
+                    </Grid>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <VirtualizingStackPanel />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+        </ListView>
     </Grid>
 </UserControl>
