--- a/SmartHome.Control/Views/Control_Content.xaml
+++ b/SmartHome.Control/Views/Control_Content.xaml
@@ -2,10 +2,18 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"  
+             xmlns:local="clr-namespace:SmartHome.Control.ViewModels"
+             mc:Ignorable="d" >
+    <UserControl.DataContext>
+        <local:Control_ContentVM/>
+    </UserControl.DataContext>
     <Grid>
-            
+        <StackPanel>
+            <Label Width="400" Content="HMI BTN STATUS:" />
+            <Label Name="PLCBTN_Status" Content="{Binding Status}" Height="30" HorizontalAlignment="Center" />
+            <Button Name="PLCBTN" Content="HMI BTN" Height="50" Width="100" Click="PLCBTN_Click"/>               
+            <Button Name="PLCBTN_Reset" Content="HMI Reset BTN" Height="50" Width="100" Click="PLCBTN_Reset_Click"/>               
+        </StackPanel>
     </Grid>
 </UserControl>
