--- a/SmartHome.Movies/Views/Movies_Content.xaml
+++ b/SmartHome.Movies/Views/Movies_Content.xaml
@@ -2,80 +2,114 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:Wpf="clr-namespace:Vlc.DotNet.Wpf;assembly=Vlc.DotNet.Wpf"
              mc:Ignorable="d"  xmlns:local="clr-namespace:SmartHome.Movies.ViewModels"
-             Loaded="UserControl_Loaded" >
+             Loaded="UserControl_Loaded" Background="Black" >
     <UserControl.DataContext>
         <local:Movies_ContentVM/>
     </UserControl.DataContext>
     <Grid>
-        <ListView Name="GenreListView" ItemsSource="{Binding MovieCollection}"  BorderThickness="0" Focusable="False"  
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="385"/>
+        </Grid.RowDefinitions>
+
+        <Wpf:VlcControl Name="localVlcControl" />
+
+        <Grid Grid.Row="0" Grid.RowSpan="2" Panel.ZIndex="100" Name="VLC_Container">
+            <Grid.Background>
+                <VisualBrush Stretch="UniformToFill">
+                    <VisualBrush.Visual>
+                        <Image Source="{Binding ElementName=localVlcControl, Path=VideoSource}" />
+                    </VisualBrush.Visual>
+                </VisualBrush >
+            </Grid.Background>
+        </Grid>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0" Margin="10,0,0,0">
+                <TextBlock Text="{Binding MSelectedTitle}" Foreground="White" FontSize="35" TextWrapping="Wrap"/>
+                <TextBlock Text="{Binding MSelectedDescription}" Foreground="White" FontSize="15" Background="Transparent" TextWrapping="Wrap"/>
+            </StackPanel>
+            <Grid Grid.Column="1" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Image Panel.ZIndex="1" Stretch="Fill" Source="http://cdn-0.nflximg.com/en_US/pages/billboard/billboard_licensed_vignette_nobottom.png"/>
+                <Image Panel.ZIndex="0" Source="{Binding MSelectedImageSource,IsAsync=True}" Stretch="Fill"/>
+            </Grid>
+        </Grid>
+        <ListView Grid.Row="1" Name="GenreListView" ItemsSource="{Binding MovieCollection}"  BorderThickness="0" Focusable="False"   Background="Transparent"
                    ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.CanContentScroll="True" 
                   KeyboardNavigation.TabNavigation="None">
-            <ListView.Resources>
-                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Transparent" />
-                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Transparent" />
-                <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent" />
-            </ListView.Resources>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <Grid>                        
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="50"/>
-                            <RowDefinition Height="200"/>
-                        </Grid.RowDefinitions>
-                        <Label Content="{Binding Path=ParentCategory}" FontSize="30" Grid.Row="0"/>
-                        <ListView Name="MediaListView" Grid.Row="1" Focusable="True"  BorderThickness="0"
+                <ListView.Resources>
+                    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Transparent" />
+                    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Transparent" />
+                    <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent" />
+                </ListView.Resources>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="40"/>
+                                <RowDefinition Height="150"/>
+                            </Grid.RowDefinitions>
+                            <Label Content="{Binding Path=ParentCategory}" FontSize="20" Grid.Row="0" Foreground="White"/>
+                            <ListView Name="MediaListView" Grid.Row="1" Focusable="True"  BorderThickness="0"
                                   ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.CanContentScroll="True"
                                   ItemsSource="{Binding IsAsync=True, RelativeSource={x:Static RelativeSource.Self}, Path=DataContext}" Background="Transparent"
                                   KeyboardNavigation.TabNavigation="None">
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <Image Name="MediaImage" Source="{Binding Path= LargeCoverArt}" Stretch="Fill"/>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                            <ItemsControl.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <VirtualizingStackPanel Orientation="Horizontal" />
-                                </ItemsPanelTemplate>
-                            </ItemsControl.ItemsPanel>
-                            <ItemsControl.ItemContainerStyle>
-                                <Style TargetType="ListViewItem">
-                                    <Style.Triggers>
-                                        <Trigger Property="IsSelected" Value="False">
-                                            <Setter Property="Control.RenderTransform">
-                                                <Setter.Value>
-                                                    <ScaleTransform ScaleX="1" ScaleY="1"/>                                                    
-                                                </Setter.Value>
-                                            </Setter>
-                                        </Trigger>
-                                        <Trigger Property="IsSelected" Value="True">
-                                            <Setter Property="Control.RenderTransform">
-                                                <Setter.Value>
-                                                    <ScaleTransform  ScaleX="1.1" ScaleY="1.1"/>
-                                                </Setter.Value>
-                                            </Setter>
-                                            <Setter Property="BorderThickness" Value="0"/>
-                                        </Trigger>
-                                    </Style.Triggers>
-                                    <Setter Property="Control.HorizontalAlignment" Value="Stretch"/>
-                                    <Setter Property="Control.VerticalAlignment" Value="Stretch"/>
-                                    <Setter Property="Control.Width" Value="250"/>
-                                    <Setter Property="Control.Height" Value="150"/>
-                                    <Setter Property="Control.Padding" Value="0"/>
-                                    <Setter Property="Control.Margin" Value="2,1,2,1"/>
-                                    <Setter Property="FocusVisualStyle" Value="{x:Null}" />
-                                </Style>
-                            </ItemsControl.ItemContainerStyle>
-                        </ListView>
-                    </Grid>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <VirtualizingStackPanel />
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>            
-        </ListView>
-    </Grid>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <Image Name="MediaImage" Source="{Binding Path= LargeCoverArt}" Stretch="Fill"/>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <VirtualizingStackPanel Orientation="Horizontal" />
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemContainerStyle>
+                                    <Style TargetType="ListViewItem">
+                                        <Style.Triggers>
+                                            <Trigger Property="IsSelected" Value="False">
+                                                <Setter Property="Control.RenderTransform">
+                                                    <Setter.Value>
+                                                        <ScaleTransform ScaleX="1" ScaleY="1"/>
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </Trigger>
+                                            <Trigger Property="IsSelected" Value="True">
+                                                <Setter Property="Control.RenderTransform">
+                                                    <Setter.Value>
+                                                        <ScaleTransform  ScaleX="1.1" ScaleY="1.1"/>
+                                                    </Setter.Value>
+                                                </Setter>
+                                                <Setter Property="BorderThickness" Value="0"/>
+                                            </Trigger>
+                                        </Style.Triggers>
+                                        <Setter Property="Control.HorizontalAlignment" Value="Stretch"/>
+                                        <Setter Property="Control.VerticalAlignment" Value="Stretch"/>
+                                        <Setter Property="Control.Width" Value="250"/>
+                                        <Setter Property="Control.Height" Value="150"/>
+                                        <Setter Property="Control.Padding" Value="0"/>
+                                        <Setter Property="Control.Margin" Value="4,1,4,1"/>
+                                        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+                                    </Style>
+                                </ItemsControl.ItemContainerStyle>
+                            </ListView>
+                        </Grid>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </ListView>
+        </Grid>  
 </UserControl>
