--- a/SmartHome.Netflix/Views/Netflix_Content.xaml
+++ b/SmartHome.Netflix/Views/Netflix_Content.xaml
@@ -11,7 +11,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="385"/>
+            <RowDefinition Height="388"/>
         </Grid.RowDefinitions>
         
         <Grid Grid.Row="0">
@@ -45,7 +45,7 @@
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="40"/>
-                            <RowDefinition Height="150"/>
+                            <RowDefinition Height="154"/>
                         </Grid.RowDefinitions>
                         <Label Content="{Binding Path=ParentCategory}" FontSize="20" Grid.Row="0" Foreground="White"/>
                         <ListView Name="NFMediaListView" Grid.Row="1" Focusable="True" BorderThickness="0"
@@ -64,29 +64,18 @@
                             </ItemsControl.ItemsPanel>
                             <ItemsControl.ItemContainerStyle>
                                 <Style TargetType="ListViewItem">
-                                    <Style.Triggers>
-                                        <Trigger Property="IsSelected" Value="False">
-                                            <Setter Property="Control.RenderTransform">
-                                                <Setter.Value>
-                                                    <ScaleTransform ScaleX="1" ScaleY="1"/>
-                                                </Setter.Value>
-                                            </Setter>
-                                        </Trigger>
+                                    <Style.Triggers>                                        
                                         <Trigger Property="IsSelected" Value="True">
-                                            <Setter Property="Control.RenderTransform">
-                                                <Setter.Value>
-                                                    <ScaleTransform  ScaleX="1.1" ScaleY="1.1"/>
-                                                </Setter.Value>
-                                            </Setter>
-                                            <Setter Property="BorderThickness" Value="0"/>
+                                            <Setter Property="Control.BorderThickness" Value="3"/>
+                                            <Setter Property="BorderBrush" Value="White"/>
                                         </Trigger>
                                     </Style.Triggers>
-                                    <Setter Property="Control.HorizontalAlignment" Value="Stretch"/>
-                                    <Setter Property="Control.VerticalAlignment" Value="Stretch"/>
-                                    <Setter Property="Control.Width" Value="250"/>
+                                    <Setter Property="Control.HorizontalAlignment" Value="Center"/>
+                                    <Setter Property="Control.VerticalAlignment" Value="Center"/>
+                                    <Setter Property="Control.Width" Value="115"/>
                                     <Setter Property="Control.Height" Value="150"/>
                                     <Setter Property="Control.Padding" Value="0"/>
-                                    <Setter Property="Control.Margin" Value="4,1,4,1"/>
+                                    <Setter Property="Control.Margin" Value="4"/>
                                     <Setter Property="FocusVisualStyle" Value="{x:Null}" />
                                 </Style>
                             </ItemsControl.ItemContainerStyle>
